Make possible to create cartes designated to be used with a particular node only. Use such cartes for communication between nodes.