@@ -14,14 +14,19 @@ import org.moera.commons.util.Util;
 import org.moera.node.data.Token;
 import org.moera.node.data.TokenRepository;
 import org.moera.node.fingerprint.CarteFingerprint;
+import org.moera.node.fingerprint.CarteProperties;
 import org.moera.node.fingerprint.FingerprintManager;
 import org.moera.node.fingerprint.FingerprintObjectType;
+import org.moera.node.global.RequestContext;
 import org.moera.node.naming.NamingCache;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
 @Component
 public class AuthenticationManager {
+
+    @Inject
+    private RequestContext requestContext;
 
     @Inject
     private TokenRepository tokenRepository;
@@ -53,47 +58,52 @@ public class AuthenticationManager {
         if (carte.length == 0) {
             return null;
         }
-        short version = carte[0]; // TODO limited to 127 versions
-        CarteFingerprint fp;
+        CarteProperties fp;
         byte[] signature;
         try {
-            RestoredObject<CarteFingerprint> rc = CryptoUtil.restore(carte, this::carteFingerprintCreator);
-            fp = rc.getObject();
+            RestoredObject<Fingerprint> rc = CryptoUtil.restore(carte, this::carteFingerprintCreator);
+            fp = (CarteProperties) rc.getObject();
             signature = new byte[rc.getAvailable()];
             System.arraycopy(carte, carte.length - signature.length, signature, 0, signature.length);
         } catch (CryptoException | FingerprintException e) {
             throw new InvalidCarteException("carte.unknown-fingerprint", e);
         }
-        if (!FingerprintObjectType.CARTE.name().equals(fp.objectType)) {
+        if (!FingerprintObjectType.CARTE.name().equals(fp.getObjectType())) {
             throw new InvalidCarteException("carte.invalid");
         }
-        if (!clientAddress.equals(fp.address)) {
+        if (!clientAddress.equals(fp.getAddress())) {
             throw new InvalidCarteException("carte.invalid");
         }
-        if (Instant.now().isBefore(Instant.ofEpochSecond(fp.beginning).minusSeconds(60))) {
+        if (Instant.now().isBefore(Instant.ofEpochSecond(fp.getBeginning()).minusSeconds(60))) {
             throw new InvalidCarteException("carte.not-begun");
         }
-        if (Instant.now().isAfter(Instant.ofEpochSecond(fp.deadline).plusSeconds(60))) {
+        if (Instant.now().isAfter(Instant.ofEpochSecond(fp.getDeadline()).plusSeconds(60))) {
             throw new InvalidCarteException("carte.expired");
         }
-        byte[] signingKey = namingCache.get(fp.ownerName).getSigningKey();
+        if (fp instanceof CarteFingerprint) {
+            String nodeName = ((CarteFingerprint) fp).getNodeName();
+            if (nodeName != null && !nodeName.equals(requestContext.getOptions().nodeName())) {
+                throw new InvalidCarteException("carte.wrong-node");
+            }
+        }
+        byte[] signingKey = namingCache.get(fp.getOwnerName()).getSigningKey();
         if (signingKey == null) {
             throw new InvalidCarteException("carte.unknown-signing-key");
         }
         if (!CryptoUtil.verify(fp, signature, signingKey)) {
             throw new InvalidCarteException("carte.invalid-signature");
         }
-        return fp.ownerName;
+        return fp.getOwnerName();
     }
 
-    private CarteFingerprint carteFingerprintCreator(short version) {
+    private Fingerprint carteFingerprintCreator(short version) {
         Class<? extends Fingerprint> fingerprintClass = fingerprintManager.get(FingerprintObjectType.CARTE, version);
         if (fingerprintClass == null) {
             throw new InvalidCarteException("carte.unknown-fingerprint");
         }
         try {
-            return (CarteFingerprint) fingerprintClass.newInstance();
-        } catch (IllegalAccessException | InstantiationException e) {
+            return fingerprintClass.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             throw new InvalidCarteException("carte.unknown-fingerprint", e);
         }
     }
